--- a/cura/Mini/PLA_medium_175_mini.ini
+++ b/cura/Mini/PLA_medium_175_mini.ini
@@ -1,3 +1,12 @@
+#
+# TODO:
+#   - ensure that the new wait temp of 28c works.
+#   - experiment with less retract before wipe to address
+#     thin skirt.
+#
+#
+
+
 [profile]
 layer_height = 0.25
 wall_thickness = 1
