--- a/cura/Mini/PLA_medium_175_mini.ini
+++ b/cura/Mini/PLA_medium_175_mini.ini
@@ -2,7 +2,8 @@
 # TODO:
 #   - ensure that the new wait temp of 28c works.
 #   - experiment with less retract before wipe to address
-#     thin skirt.
+#     thin skirt. theory: less material in tip, less drip.
+#     3mm retract distance drains hotend too much.
 #
 #
 
