175 mini PLA: only retract 18mm
trying out less retraction to help with skirt

--- a/cura/Mini/PLA_medium_175_mini.ini
+++ b/cura/Mini/PLA_medium_175_mini.ini
@@ -3,7 +3,8 @@
 #   - experiment with less retract before wipe to address
 #     thin skirt. theory: less material in tip, less drip.
 #     3mm retract distance drains hotend too much.
-#
+#       1.75 / 2.85 = .61, 30 * .61 = 18.3
+#       try 18mm
 #
 
 
@@ -97,7 +98,7 @@ start.gcode = ;This Gcode has been generated specifically for the LulzBot Mini
 	M140 S{print_bed_temperature}; get bed heating up
 	G28                          ; home all
 	M109 S140                    ; set to cleaning temp and wait
-	G1 Z150 E-30 F75             ; suck up XXmm of filament
+	G1 Z150 E-18 F75             ; suck up XXmm of filament
 	M109 S140                    ; heat up rest of way
 	G1 X45 Y174 F11520           ; move behind scraper
 	G1 Z0  F1200                 ; CRITICAL: set Z to height of top of scraper
