-18 was ok, try -10

--- a/cura/Mini/PLA_medium_175_mini.ini
+++ b/cura/Mini/PLA_medium_175_mini.ini
@@ -98,7 +98,12 @@ start.gcode = ;This Gcode has been generated specifically for the LulzBot Mini
 	M140 S{print_bed_temperature}; get bed heating up
 	G28                          ; home all
 	M109 S140                    ; set to cleaning temp and wait
-	G1 Z150 E-18 F75             ; suck up XXmm of filament
+	; AJE test notes:
+	;   -30: original setting, weak skirt with 1.75mm hatchbox pla
+	;   -18: 61% of 3mm filament original setting (1.75/2.85 = ~.61)
+	;        - was ok... skirt still not connected, thin first quarter.
+	;   -10: TBD... testing now.
+	G1 Z150 E-10 F75             ; suck up XXmm of filament
 	M109 S140                    ; heat up rest of way
 	G1 X45 Y174 F11520           ; move behind scraper
 	G1 Z0  F1200                 ; CRITICAL: set Z to height of top of scraper
