--- a/cura/Mini/PLA_medium_175_mini.ini
+++ b/cura/Mini/PLA_medium_175_mini.ini
@@ -4,7 +4,8 @@
 #     thin skirt. theory: less material in tip, less drip.
 #     3mm retract distance drains hotend too much.
 #       1.75 / 2.85 = .61, 30 * .61 = 18.3
-#       try 18mm
+#       try 18mm. trying 10mm. 
+#   - try less retraction during printing.
 #
 
 
