trying out .5mm retraction (working well so far)
- also note that 10mm pre-wipe retraction is
  working well.

--- a/cura/Mini/PLA_medium_175_mini.ini
+++ b/cura/Mini/PLA_medium_175_mini.ini
@@ -4,8 +4,8 @@
 #     thin skirt. theory: less material in tip, less drip.
 #     3mm retract distance drains hotend too much.
 #       1.75 / 2.85 = .61, 30 * .61 = 18.3
-#       try 18mm. trying 10mm. 
-#   - try less retraction during printing.
+#       try 18mm. trying 10mm. 10mm looks good.
+#   - experimenting with .5mm retraction vs 1.5mm default
 #
 
 
@@ -34,7 +34,7 @@ filament_diameter3 = 0
 filament_diameter4 = 0
 filament_flow = 100.0
 retraction_speed = 10
-retraction_amount = 1.5
+retraction_amount = 0.5
 retraction_dual_amount = 16.5
 retraction_min_travel = 1.5
 retraction_combing = True
