--- a/cura/Mini/PLA_medium_175_mini.ini
+++ b/cura/Mini/PLA_medium_175_mini.ini
@@ -6,6 +6,8 @@
 #       1.75 / 2.85 = .61, 30 * .61 = 18.3
 #       try 18mm. trying 10mm. 10mm looks good.
 #   - experimenting with .5mm retraction vs 1.5mm default
+#     - could go even less than .5mm?
+#   - try less end retraction?
 #
 
 
