--- a/cura/Mini/PLA_medium_175_mini.ini
+++ b/cura/Mini/PLA_medium_175_mini.ini
@@ -105,8 +105,9 @@ start.gcode = ;This Gcode has been generated specifically for the LulzBot Mini
 	;   -30: original setting, weak skirt with 1.75mm hatchbox pla
 	;   -18: 61% of 3mm filament original setting (1.75/2.85 = ~.61)
 	;        - was ok... skirt still not connected, thin first quarter.
-	;   -10: TBD... testing now.
-	G1 Z150 E-10 F75             ; suck up XXmm of filament
+	;   -10: works ok. first line is fat, then thin for a bit.
+	;    -1: testing... slower feed (10 vs 75)
+	G1 Z150 E-1 F10             ; suck up XXmm of filament
 	M109 S140                    ; heat up rest of way
 	G1 X45 Y174 F11520           ; move behind scraper
 	G1 Z0  F1200                 ; CRITICAL: set Z to height of top of scraper
@@ -154,7 +155,8 @@ end.gcode =
 	M104 S0                                      ; hotend off
 	M140 S0                                      ; heated bed heater off (if you have it)
 	M107                                         ; fans off
-	G92 E5                                       ; set extruder to 5mm for retract on print end
+	; AJE: experiment with retracting less (1mm vs 5mm)
+	G92 E1                                       ; set extruder to 5mm for retract on print end
 	G1 X5 Y5 Z156 E0 F10000                      ; move to cooling positioning
 	M190 R50                                     ; wait for bed to cool
 	M104 S0                                      ;
