--- a/cura/Mini/PLA_medium_175_mini.ini
+++ b/cura/Mini/PLA_medium_175_mini.ini
@@ -106,8 +106,8 @@ start.gcode = ;This Gcode has been generated specifically for the LulzBot Mini
 	;   -18: 61% of 3mm filament original setting (1.75/2.85 = ~.61)
 	;        - was ok... skirt still not connected, thin first quarter.
 	;   -10: works ok. first line is fat, then thin for a bit.
-	;    -1: testing... slower feed (10 vs 75)
-	G1 Z150 E-1 F10             ; suck up XXmm of filament
+	;    -1: testing...
+	G1 Z150 E-1 F75             ; suck up XXmm of filament
 	M109 S140                    ; heat up rest of way
 	G1 X45 Y174 F11520           ; move behind scraper
 	G1 Z0  F1200                 ; CRITICAL: set Z to height of top of scraper
